--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-__pycache__/datetime.cpython-38.pyc
-__pycache__/recursion.cpython-38.pyc
-__pycache__/sorting.cpython-38.pyc
-__pycache__/string.cpython-38.pyc
+__pycache__/*
